Remove filter references but always pass a filter id, ensure control region is intact

--- a/app/views/admin/page_parts/_string_page_part.html.haml
+++ b/app/views/admin/page_parts/_string_page_part.html.haml
@@ -2,5 +2,7 @@
   .part{:id => "part-#{page_part.name.to_slug}"}
     = hidden_field_tag 'page[parts][][name]', page_part.name, :id => "part_#{page_part.name.to_slug}_name"
     = hidden_field_tag 'page[parts][][page_part_type]', 'StringPagePart', :id => "part_#{page_part.name.to_slug}_page_part_type"
+    = hidden_field_tag 'page[parts][][filter_id]', ''
+    = render_region :part_controls, :locals => {:page_part => page_part}
     %div
       = text_field_tag 'page[parts][][content]', h(page_part.content), :class => "textbox string-page-part", :maxlength => 255, :id => "part_#{page_part.name.to_slug}_content"
