--- a/app/views/admin/page_parts/_boolean_page_part.html.haml
+++ b/app/views/admin/page_parts/_boolean_page_part.html.haml
@@ -2,7 +2,7 @@
   .part{:id => "part-#{page_part.name.to_slug}"}
     = hidden_field_tag 'page[parts][][name]', page_part.name, :id => "part_#{page_part.name.to_slug}_name"
     = hidden_field_tag 'page[parts][][page_part_type]', 'BooleanPagePart', :id => "part_#{page_part.name.to_slug}_page_part_type"
-    %p
-      = render_region :part_controls, :locals => {:page_part => page_part}
+    = hidden_field_tag 'page[parts][][filter_id]', ''
+    = render_region :part_controls, :locals => {:page_part => page_part}
     %div
       = check_box_tag 'page[parts][][content]', true, page_part.content?, :class => "checkbox", :id => "part_#{page_part.name.to_slug}_content"
