Update part partials to nested form syntax

--- a/app/views/admin/page_parts/_page_part.html.haml
+++ b/app/views/admin/page_parts/_page_part.html.haml
@@ -1,1 +1,1 @@
-= render :partial => 'admin/page_parts/' + page_part.partial_name, :locals => { :page_part => page_part }
+= render :partial => 'admin/page_parts/' + page_part.partial_name, :locals => { :page_part => page_part, :page_part_counter => page_part_counter }
