--- a/app/views/admin/pages/_popups.html.haml
+++ b/app/views/admin/pages/_popups.html.haml
@@ -4,6 +4,7 @@
     %h3 Add Part
     - remote_form_for([:admin, PagePart.new], :update => "pages", :position => :bottom, :loading => 'part_loading()', :complete => 'part_added()', :condition => 'valid_part_name()') do |f|
       %div
+        = hidden_field_tag 'index', @page.parts.size, :id => 'page-part-index-field'
         = f.collection_select :page_part_type, [PagePart, *PagePart.descendants], :name, :display_name
         = f.text_field :name, :id => 'part-name-field' #, :maxlength => 100
         = submit_tag "Add Part", :id => 'add-part-button'
@@ -23,7 +24,7 @@
 
   #filter-reference-popup.popup{ :style => "display:none;" }
     %h3
-      %span#filter-type= filter.filter_name
+      %span#filter-type= default_filter_name
       Reference
     #filter-reference= filter_reference
     %p
