Pass back the name of course...

--- a/app/views/admin/grouped_page_parts/_boolean_page_part.html.haml
+++ b/app/views/admin/grouped_page_parts/_boolean_page_part.html.haml
@@ -1,3 +1,4 @@
+= hidden_field_tag "page[parts_attributes][#{page_part_counter}][name]", page_part.name, :id => "part_#{page_part_counter}_name"
 = hidden_field_tag "page[parts_attributes][#{page_part_counter}][id]", page_part.id, :id => "part_#{page_part_counter}_id", :class => "id_input"
 = hidden_field_tag "page[parts_attributes][#{page_part_counter}][_delete]", false, :class => "delete_input"
 = hidden_field_tag "page[parts_attributes][#{page_part_counter}][filter_id]", ''
