--- a/app/views/admin/content_types/_type_select.haml
+++ b/app/views/admin/content_types/_type_select.haml
@@ -1,4 +1,4 @@
 %label{ :for => :page_part_type } Type
 %br/
-= select_tag 'page_part[page_part_type]', options_from_collection_for_select([PagePart, *PagePart.descendants], :name, :display_name)
+= select_tag 'page_part[page_part_type]', options_for_select([PagePart, *PagePart.descendants].sort{|x,y| x.display_name <=> y.display_name}.map{|x| [x.display_name, x.name]})
 %br/
