--- a/app/views/admin/content_types/_type_select.haml
+++ b/app/views/admin/content_types/_type_select.haml
@@ -1,4 +1,3 @@
-%label{ :for => :page_part_page_part_type } Type
-%br/
-= select_tag 'page_part[page_part_type]', options_for_select([PagePart, *PagePart.descendants].sort{|x,y| x.display_name <=> y.display_name}.map{|x| [x.display_name, x.name]})
-%br/
+.Field
+  %label{ :for => 'page_part_page_part_type' } Type
+  = select_tag 'page_part[page_part_type]', options_for_select([PagePart, *PagePart.descendants].sort{|x,y| x.display_name <=> y.display_name}.map{|x| [x.display_name, x.name]})
