--- a/app/views/admin/content_types/_type_select.haml
+++ b/app/views/admin/content_types/_type_select.haml
@@ -1,3 +1,3 @@
 .Field
   %label{ :for => 'page_part_page_part_type' } Type
-  = select_tag 'page_part[page_part_type]', options_for_select([PagePart, *PagePart.descendants].select{|x| x.visible?}.sort{|x,y| x.display_name <=> y.display_name}.map{|x| [x.display_name, x.name]})
+  = select_tag 'page_part[page_part_type]', options_for_select([PagePart, *PagePart.descendants].select{|x| x.visible?}.sort{|x,y| x.display_name <=> y.display_name}.map{|x| [x.display_name, x.name]}, "WysiwygPagePart")
