--- a/app/views/admin/page_parts/_text_page_part.html.haml
+++ b/app/views/admin/page_parts/_text_page_part.html.haml
@@ -1,2 +1,2 @@
 %div
-  ~ text_area_tag "page[parts_attributes][#{page_part_counter}][content]", h(page_part.content), :size => '80x8', :class => "textarea", :style => "width: 100%", :id => "part_#{page_part.name.to_slug}_content"
+  ~ text_area_tag "page[parts_attributes][#{page_part_counter}][content]", h(page_part.content), :size => '80x8', :class => "textarea TextAreaInput", :id => "part_#{page_part.name.to_slug}_content"
