--- a/app/views/admin/page_parts/_integer_page_part.html.haml
+++ b/app/views/admin/page_parts/_integer_page_part.html.haml
@@ -1,2 +1,2 @@
-%div
+%div{ :id => "page-#{page_part.name.to_slug}", :class => "#{'page' if request.xhr?} page-part Field", "data-caption" => page_part.name.to_slug }
   = text_field_tag "page[parts_attributes][#{page_part_counter}][content]", page_part.content, :style => "width:2em;", :id => "part_#{page_part.name.to_slug}_content"
