--- a/app/views/admin/page_parts/_page_part.html.haml
+++ b/app/views/admin/page_parts/_page_part.html.haml
@@ -1,10 +1,8 @@
-- part_fields = capture do
+.page.page-part.Field{ :id => "page-#{page_part.name.to_slug}", "data-caption" => page_part.name.to_slug }
   = hidden_field_tag "page[parts_attributes][#{page_part_counter}][name]", page_part.name, :id => "part_#{page_part_counter}_name"
   = hidden_field_tag "page[parts_attributes][#{page_part_counter}][id]", page_part.id, :id => "part_#{page_part_counter}_id", :class => "id_input"
   = hidden_field_tag "page[parts_attributes][#{page_part_counter}][_delete]", false, :class => "delete_input"
   = hidden_field_tag "page[parts_attributes][#{page_part_counter}][filter_id]", ''
   = hidden_field_tag "page[parts_attributes][#{page_part_counter}][page_part_type]", page_part.class.to_s
-  = render_region :part_controls, :locals => {:page_part => page_part, :page_part_counter => page_part_counter}
+  
   = render :partial => 'admin/page_parts/' + page_part.partial_name, :locals => { :page_part => page_part, :page_part_counter => page_part_counter }
-
-= render_part(page_part,part_fields)
