--- a/app/views/admin/pages/_popups.html.haml
+++ b/app/views/admin/pages/_popups.html.haml
@@ -1,7 +1,7 @@
 - content_for 'popups' do
   #add_part_popup.popup{:style => "display: none"}
     #add_part_busy.busy{:style => "display: none"}= image('spinner.gif', :alt => "")
-    %h3.title Add Parts
+    %h3.title Add Part
     - form_for([:admin, PagePart.new], :html => { :onsubmit => "addPart(this); return false" }) do |f|
       %p
         %label{:for => 'part_name_field'} Name
