Use core date picker

--- a/app/views/admin/page_parts/_datetime_page_part.haml
+++ b/app/views/admin/page_parts/_datetime_page_part.haml
@@ -1,1 +1,1 @@
-= text_field_tag "page[parts_attributes][#{page_part_counter}][content]", page_part.content, :id => "part_#{page_part.name.to_slug}_content", :class => 'DatePicker'
+= text_field_tag "page[parts_attributes][#{page_part_counter}][content]", page_part.content.strftime("%B %d, %Y"), :id => "part_#{page_part.name.to_slug}_content", :class => 'date'
